--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "advanced_ai_project"
 version = "1.0-dev"
 dependencies = [
+    "torch~=2.7.0",
     "tqdm~=4.67.1",
     "optuna~=4.2.1",
     "torchinfo~=1.8.0",
