--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "tqdm~=4.67.1",
     "optuna~=4.3.0",
     "torchinfo~=1.8.0",
+    "kagglehub~=0.3.12",
 ]
 
 [tool.setuptools.packages.find]
